@@ -206,6 +206,8 @@ Unreleased changes (1.0-dev)
 
 73. NUTCH-606 - Refactoring of Generator, run all urls through checks (kubes)
 
+74. NUTCH-605 - Change deprecated configuration methods for Hadoop (kubes)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
